--- a/calendar.html
+++ b/calendar.html
@@ -1036,7 +1036,7 @@
                                 >
                                   <div class="_5vnsql">
                                     <div
-                                      class="rbc-event-content _zdxht7"
+                                      class="rbc-event-content w-100"
                                       title="Cooking Deep Fried Bright Orange Battered Eggs"
                                     >
                                       <div class="_1skxaokw">
