--- a/contact-host.html
+++ b/contact-host.html
@@ -2344,7 +2344,7 @@
                                                                 class="d-flex"
                                                               >
                                                                 <div
-                                                                  class="_zdxht7"
+                                                                  class="w-100"
                                                                 >
                                                                   <div
                                                                     class="_e296pg"
