--- a/inbox.html
+++ b/inbox.html
@@ -8821,7 +8821,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_zdxht7">
+                                      <div class="w-100">
                                         <label
                                           class="_krjbj"
                                           for="message_input"
