--- a/payment.html
+++ b/payment.html
@@ -450,7 +450,7 @@
                                                 <div class="_54vbcpj">
                                                   <label for="0"
                                                     ><div class="_ranq7o">
-                                                      <div class="_zdxht7">
+                                                      <div class="w-100">
                                                         <div class="_1rbjsj">
                                                           <div class="_zjunba">
                                                             Pay in full
@@ -477,7 +477,7 @@
                                                 <div class="_1bhmmha">
                                                   <label for="1"
                                                     ><div class="_ranq7o">
-                                                      <div class="_zdxht7">
+                                                      <div class="w-100">
                                                         <div class="_1rbjsj">
                                                           <div class="_zjunba">
                                                             Pay part now, part
