--- a/products.html
+++ b/products.html
@@ -16478,7 +16478,7 @@
                                                                       class="d-flex"
                                                                     >
                                                                       <div
-                                                                        class="_zdxht7"
+                                                                        class="w-100"
                                                                       >
                                                                         <div
                                                                           class="_e296pg"
@@ -16974,7 +16974,7 @@
                                                                       class="d-flex"
                                                                     >
                                                                       <div
-                                                                        class="_zdxht7"
+                                                                        class="w-100"
                                                                       >
                                                                         <div
                                                                           class="_e296pg"
@@ -17663,7 +17663,7 @@
                                                                       class="d-flex"
                                                                     >
                                                                       <div
-                                                                        class="_zdxht7"
+                                                                        class="w-100"
                                                                       >
                                                                         <div
                                                                           class="_e296pg"
