--- a/specific_trip.html
+++ b/specific_trip.html
@@ -234,7 +234,7 @@
                                       </div>
                                     </div>
                                     <div class="_5g6li5">
-                                      <div class="_zdxht7">
+                                      <div class="w-100">
                                         <section>
                                           <div class="_18tkw86">
                                             <div class="_mwt4r90">
