--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1575,7 +1575,7 @@
                               If 5 adults are in a group, you will earn ₹98.40
                               for a private group.
                             </div>
-                            <div class="_zdxht7">
+                            <div class="w-100">
                               <div
                                 style="
                                   position: relative;
