--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -180,7 +180,7 @@
                               >
                                 <div class="_hwsulw">
                                   <div
-                                    class="_v0gz4uz"
+                                    class="lite-image"
                                     style="
                                       border-radius: 24px 24px 0px 0px;
                                       --dls-liteimage-padding-top: 66.6667%;
@@ -189,9 +189,9 @@
                                     aria-busy="false"
                                     aria-label="Cover photo"
                                   >
-                                    <div class="_4626ulj">
+                                    <div class="lite-image__wrapper">
                                       <img
-                                        class="_91slf2a"
+                                        class="lite-image__default"
                                         style="
                                           object-fit: cover;
                                           border-radius: 24px 24px 0px 0px;
@@ -203,7 +203,7 @@
                                         data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/7e86c311-8b75-4a8f-88ba-4e56c7197293.jpeg?aki_policy=x_medium"
                                       />
                                       <div
-                                        class="_10xjrv2u"
+                                        class="lite-image__fallback"
                                         style="
                                           background-image: url(https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/7e86c311-8b75-4a8f-88ba-4e56c7197293.jpeg?aki_policy=x_medium);
                                           background-size: cover;
