--- a/covidsafety.html
+++ b/covidsafety.html
@@ -150,15 +150,15 @@
                                               >
                                                 <div class="card__media-container">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       border-radius: 12px;
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="lite-image__wrapper">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -171,7 +171,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image__fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/pictures/5b1705cb-b607-4d14-ab70-ba651db04712.jpg');
                                                           background-size: cover;
@@ -231,15 +231,15 @@
                                               >
                                                 <div class="card__media-container">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       border-radius: 12px;
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="lite-image__wrapper">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -252,7 +252,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image__fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/pictures/73c86208-af51-41fe-8ad4-a71a7b8e2114.jpg');
                                                           background-size: cover;
@@ -331,15 +331,15 @@
                                               >
                                                 <div class="card__media-container">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       border-radius: 12px;
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="lite-image__wrapper">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -352,7 +352,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image__fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/pictures/83755149-3f71-4501-9b52-c7b0455fcbcc.jpg');
                                                           background-size: cover;
@@ -411,15 +411,15 @@
                                               >
                                                 <div class="card__media-container">
                                                   <div
-                                                    class="_v0gz4uz"
+                                                    class="lite-image"
                                                     style="
                                                       border-radius: 12px;
                                                       --dls-liteimage-padding-top: 56.25%;
                                                     "
                                                   >
-                                                    <div class="_4626ulj">
+                                                    <div class="lite-image__wrapper">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -432,7 +432,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_10xjrv2u"
+                                                        class="lite-image__fallback"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/pictures/39ab10dc-7bff-4338-8793-683716af1f65.jpg');
                                                           background-size: cover;
