--- a/notifications.html
+++ b/notifications.html
@@ -416,15 +416,15 @@
                                         ><div class="_1nlq2tac">
                                           <div class="_1hctbk4">
                                             <div
-                                              class="_v0gz4uz"
+                                              class="lite-image"
                                               style="
                                                 border-radius: 50%;
                                                 --dls-liteimage-padding-top: 100%;
                                               "
                                             >
-                                              <div class="_4626ulj">
+                                              <div class="lite-image__wrapper">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -436,7 +436,7 @@
                                                   "
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image__fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/airbnb/static/logos/belo_babu-f2e24a0d05d5e86c94a14dbd7dc6cf4c.png');
                                                     background-size: cover;
@@ -498,15 +498,15 @@
                                         ><div class="_1nlq2tac">
                                           <div class="_1hctbk4">
                                             <div
-                                              class="_v0gz4uz"
+                                              class="lite-image"
                                               style="
                                                 border-radius: 50%;
                                                 --dls-liteimage-padding-top: 100%;
                                               "
                                             >
-                                              <div class="_4626ulj">
+                                              <div class="lite-image__wrapper">
                                                 <img
-                                                  class="_91slf2a"
+                                                  class="lite-image__default"
                                                   aria-hidden="true"
                                                   alt=""
                                                   elementtiming="LCP-target"
@@ -518,7 +518,7 @@
                                                   "
                                                 />
                                                 <div
-                                                  class="_10xjrv2u"
+                                                  class="lite-image__fallback"
                                                   style="
                                                     background-image: url('https://a0.muscache.com/airbnb/static/logos/belo_babu-f2e24a0d05d5e86c94a14dbd7dc6cf4c.png');
                                                     background-size: cover;
