--- a/products.html
+++ b/products.html
@@ -373,7 +373,7 @@
                                                       class="_11eqlma4"
                                                     >
                                                       <div
-                                                        class="_v0gz4uz"
+                                                        class="lite-image"
                                                         role="img"
                                                         aria-busy="false"
                                                         aria-label="Show all photos"
@@ -381,7 +381,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_4626ulj">
+                                                        <div class="lite-image__wrapper">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -412,7 +412,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_10xjrv2u"
+                                                            class="lite-image__fallback"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg?im_w=720');
                                                               background-size: cover;
@@ -439,7 +439,7 @@
                                                       class="_11eqlma4"
                                                     >
                                                       <div
-                                                        class="_v0gz4uz"
+                                                        class="lite-image"
                                                         role="img"
                                                         aria-busy="false"
                                                         aria-label="Show all photos"
@@ -447,7 +447,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_4626ulj">
+                                                        <div class="lite-image__wrapper">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -476,7 +476,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_10xjrv2u"
+                                                            class="lite-image__fallback"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-16354372/original/65f11be7-2dbd-493c-ab60-aea2c6c2c94b.png?im_w=720');
                                                               background-size: cover;
@@ -503,7 +503,7 @@
                                                       class="_11eqlma4"
                                                     >
                                                       <div
-                                                        class="_v0gz4uz"
+                                                        class="lite-image"
                                                         role="img"
                                                         aria-busy="false"
                                                         aria-label="Show all photos"
@@ -511,7 +511,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_4626ulj">
+                                                        <div class="lite-image__wrapper">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -540,7 +540,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_10xjrv2u"
+                                                            class="lite-image__fallback"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/49728671-82c7-4f72-826a-fbf02c955a0c.jpg?im_w=720');
                                                               background-size: cover;
@@ -1334,7 +1334,7 @@
                                                       class="_11eqlma4"
                                                     >
                                                       <div
-                                                        class="_v0gz4uz"
+                                                        class="lite-image"
                                                         role="img"
                                                         aria-busy="false"
                                                         aria-label="Show all photos"
@@ -1342,7 +1342,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_4626ulj">
+                                                        <div class="lite-image__wrapper">
                                                           <picture
                                                             ><source
                                                               srcset="
@@ -1371,7 +1371,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_10xjrv2u"
+                                                            class="lite-image__fallback"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-16354372/original/78d4d7fe-ed05-4abf-b56d-613be2abc87e.jpeg?im_w=720');
                                                               background-size: cover;
