--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1055,7 +1055,7 @@
                               </section>
                             </div>
                             <div
-                              class="_v0gz4uz"
+                              class="lite-image"
                               style="
                                 border-radius: 12px;
                                 background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAO0lEQVQIHQEwAM//AaRxUzE0HAIACMe7xcPV7wHZpGr8Bw/w7vf54fvy+PkBxpxuAP789PX+3eL20b+/ZXMeAKXl/CoAAAAASUVORK5CYII=');
@@ -1063,9 +1063,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="_4626ulj">
+                              <div class="lite-image__wrapper">
                                 <img
-                                  class="_91slf2a"
+                                  class="lite-image__default"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
@@ -1077,7 +1077,7 @@
                                   "
                                 />
                                 <div
-                                  class="_10xjrv2u"
+                                  class="lite-image__fallback"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/c3be8348-1114-40e2-9bd8-70208a07867d.jpg');
                                     background-size: contain;
