--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1060,7 +1060,7 @@
                               </section>
                             </div>
                             <div
-                              class="_v0gz4uz"
+                              class="lite-image"
                               style="
                                 border-radius: 12px;
                                 background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAO0lEQVQIHQEwAM//AZdiQMzi9BQgJRUaEEYkLgF/UTv5EiA8SFX26eAWAPEBc0It8v8AHSsp8fn36AQPrK0TBFYOvkwAAAAASUVORK5CYII=');
@@ -1068,9 +1068,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="_4626ulj">
+                              <div class="lite-image__wrapper">
                                 <img
-                                  class="_91slf2a"
+                                  class="lite-image__default"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
@@ -1082,7 +1082,7 @@
                                   "
                                 />
                                 <div
-                                  class="_10xjrv2u"
+                                  class="lite-image__fallback"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/bbc4eb1e-9ec9-4dfb-a108-c371a68d71d2.jpg');
                                     background-size: contain;
