--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1058,7 +1058,7 @@
                               </section>
                             </div>
                             <div
-                              class="_v0gz4uz"
+                              class="lite-image"
                               style="
                                 border-radius: 12px;
                                 background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAO0lEQVQIHQEwAM//AdLGvZJ5eBkNCzpeYAsMDQG9rZ7ezMHg3uMjNz0VIiwBn5iMvb7H6uDdQktKDB8q+XoVDxMvgasAAAAASUVORK5CYII=');
@@ -1066,9 +1066,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="_4626ulj">
+                              <div class="lite-image__wrapper">
                                 <img
-                                  class="_91slf2a"
+                                  class="lite-image__default"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
@@ -1080,7 +1080,7 @@
                                   "
                                 />
                                 <div
-                                  class="_10xjrv2u"
+                                  class="lite-image__fallback"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/fb2bcd94-54d6-4eb8-b22b-f8755e38a733.jpg');
                                     background-size: contain;
