--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1061,7 +1061,7 @@
                               </section>
                             </div>
                             <div
-                              class="_v0gz4uz"
+                              class="lite-image"
                               style="
                                 border-radius: 12px;
                                 background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAOUlEQVQIHWM0MTLxdLbj4Rb88PP7qaMHGR0cTB3NLf59YTS2szpx5iSjhak6OxuPtLTYp2cfOIWEAaeBEQ9wFsZjAAAAAElFTkSuQmCC');
@@ -1069,9 +1069,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="_4626ulj">
+                              <div class="lite-image__wrapper">
                                 <img
-                                  class="_91slf2a"
+                                  class="lite-image__default"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
@@ -1083,7 +1083,7 @@
                                   "
                                 />
                                 <div
-                                  class="_10xjrv2u"
+                                  class="lite-image__fallback"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/76e8cb54-4a6a-4a94-8c0e-ef4d21024c8b.jpg');
                                     background-size: contain;
