--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1058,7 +1058,7 @@
                               </section>
                             </div>
                             <div
-                              class="_v0gz4uz"
+                              class="lite-image"
                               style="
                                 border-radius: 12px;
                                 background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAOUlEQVQIHWPUc9CXk1RVlf/198W7X0JfGJ3CgkTkJf5ePmnIzcHFxcro6OUpwsetKyn09cvHT/84AZaFEWWdNlrJAAAAAElFTkSuQmCC');
@@ -1066,9 +1066,9 @@
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
                             >
-                              <div class="_4626ulj">
+                              <div class="lite-image__wrapper">
                                 <img
-                                  class="_91slf2a"
+                                  class="lite-image__default"
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
@@ -1080,7 +1080,7 @@
                                   "
                                 />
                                 <div
-                                  class="_10xjrv2u"
+                                  class="lite-image__fallback"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/11649dd3-b032-459f-9db3-5c901a5d7dc7.jpg');
                                     background-size: contain;
