--- a/login-security.html
+++ b/login-security.html
@@ -626,7 +626,7 @@
                                           </h1>
                                         </div>
                                         <div class="_s50zru">
-                                          <div class="_13cc5fty">
+                                          <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
                                                 <svg
@@ -700,7 +700,7 @@
                                           </div>
                                         </div>
                                         <div class="_s50zru">
-                                          <div class="_13cc5fty">
+                                          <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
                                                 <svg
@@ -763,7 +763,7 @@
                                           </div>
                                         </div>
                                         <div class="_s50zru">
-                                          <div class="_13cc5fty">
+                                          <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
                                                 <svg
@@ -828,7 +828,7 @@
                                           </div>
                                         </div>
                                         <div class="_s50zru">
-                                          <div class="_13cc5fty">
+                                          <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
                                                 <svg
@@ -894,7 +894,7 @@
                                           </div>
                                         </div>
                                         <div class="_s50zru">
-                                          <div class="_13cc5fty">
+                                          <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
                                                 <svg
@@ -1775,7 +1775,7 @@
                                             </h2>
                                           </div>
                                           <div class="_s50zru">
-                                            <div class="_13cc5fty">
+                                            <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
                                                   <svg
@@ -1853,7 +1853,7 @@
                                             </div>
                                           </div>
                                           <div class="_s50zru">
-                                            <div class="_13cc5fty">
+                                            <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
                                                   <svg
@@ -1918,7 +1918,7 @@
                                             </div>
                                           </div>
                                           <div class="_s50zru">
-                                            <div class="_13cc5fty">
+                                            <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
                                                   <svg
@@ -1985,7 +1985,7 @@
                                             </div>
                                           </div>
                                           <div class="_s50zru">
-                                            <div class="_13cc5fty">
+                                            <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
                                                   <svg
@@ -2053,7 +2053,7 @@
                                             </div>
                                           </div>
                                           <div class="_s50zru">
-                                            <div class="_13cc5fty">
+                                            <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
                                                   <svg
